# Aegis

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  GOAL.md  Makefile  README.md  alembic.ini  build_real_graph.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
aegis/: __init__.py  cli.py  config.py  logging.py
aegis/actions/: __init__.py  service.py
aegis/analytics/: __init__.py
aegis/api/: __init__.py  app.py  auth.py  deps.py  errors.py  schemas.py
aegis/assist/: __init__.py
aegis/audit/: __init__.py  chain.py
aegis/authz/: __init__.py  fga.py  filters.py  outbox.py
aegis/domain/: __init__.py
aegis/er/: __init__.py  adjudication.py  rules.py  settings.py
aegis/evidence/: __init__.py  vault.py
aegis/functions/: __init__.py
app/: server.py
data/: README.md
docs/: ADDING_DATA.md  BACKUP_RESTORE.md  GIT_WORKFLOW.md  INGESTION.md  RUNNING.md
infra/: bootstrap.sh  docker-compose.yml
legacy/: ARCHITECTURE.md  README.md  __init__.py  build_real_graph.py  demo.py
migrations/: env.py
ontology/: README.md  aegis.yaml
pipeline/: ingest.py  pdf_ingest.py  transcribe.py
scripts/: backup.sh  restore.sh  setup_ingestion.sh
sdk/: README.md
speckit/: README.md  constitution.md  decisions.md  phase-1-exit-review.md  plan.md  roadmap.md  spec.md  tasks-phase-1.md
tests/: test_actions.py  test_api.py  test_audit.py  test_auth.py  test_authz.py  test_evidence.py  test_ingestion.py  test_migration.py  test_ontology.py  test_projections.py  test_revocation.py  test_schema.py
ui/: README.md  openapi.json
(+113 files in other folders)
