[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis"
version = "0.1.0"
description = "Aegis — governed, claims-based intelligence platform core (see speckit/)"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "structlog>=24.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pyyaml>=6",
    "minio>=7.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pyjwt[crypto]>=2.9",
    "httpx>=0.27",
    # Projection cell detection reuses pipeline.clustering; networkx is the
    # pure-python fallback that guarantees `aegis projections rebuild` works
    # without the optional C-extension leiden backend below.
    "networkx>=3",
]

[project.optional-dependencies]
# python-igraph + leidenalg give true multiplex Leiden (pipeline.clustering
# prefers them, falls back to networkx Louvain when absent). In dev/CI so the
# projection tests exercise the leiden path.
dev = ["pytest>=8", "python-igraph>=0.11", "leidenalg>=0.10"]

[project.scripts]
aegis = "aegis.cli:app"

# Only the platform core is packaged; the legacy extraction prototype (pipeline/)
# and UI (app/) keep living beside it until their Phase-1 rewiring (tasks T9/T14).
[tool.hatch.build.targets.wheel]
packages = ["aegis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires the dedicated PostgreSQL test database"]
